# tools

./: .gitignore  README.md
Maya_tools/: AssignCheckerShader.py  ControllerSetup.py  CreateShape.py  CustomMenu.py  CustomScripts.py  CustomScriptsUI.py  GetCurPath.py  HistNdFn.py  IK_Spline.py  Ik_Spline_Setup_Ui.py  Jntpos.py  LayerTexSwitch.py  LoopMotionPath.py  ManageControl.py  README.md  ReadMe_Controls.txt  ReadMe_CustomMenu.txt  ReadMe_JointPlacement.txt  ReadMe_LoopMotionPath.txt  ReadMe_RearrangeDeformerNodes.txt  ReadMe_RenameDeformerNodes.txt  ReadMe_ReplaceInstanceNodes.txt  ReadMe_SplineIK.txt  RearrangeDeformers.py  RenameNodes.py  ReplaceInstance.py  SequentialLoops.py  UVScaleRatio.py  deformers_order.txt  high_to_low_res_curve.py  importFileScript.py  insertJointsUI.py  object_creator_operations.py  object_creator_ui.py  pole_vector_position.py  shape_list.txt  spiral.py  splitLoops.py
Maya_tools/Photoshop to Maya Textures/: File Instructions.txt  MayaCmdPrt.py  mayaSocket.py  photoshopSave_MayaUpdate_ARUN.jsx  testFile.ma  textureFile.psd  updateTexture.py
USD_ref/: CMakeLists.txt  main.cpp
USD_ref/src/: animation_test.cpp  animation_test.h  block_change_test.cpp  block_change_test.h  generic.cpp  generic.h  layers_test.cpp  layers_test.h  main.cpp
